melhor organização dos documentos

--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -13,13 +13,17 @@
     td {
       padding: 8px;
     }
-
+    
     .short-text { display: none; white-space: nowrap; }
-    .full-text { white-space: nowrap; }
+    .full-text { display: inline-block; white-space: nowrap; }
 
-    @media (max-width: 1200px) {
+    @media (max-width: 1400px) {
         .short-text { display: inline-block; }
         .full-text { display: none; }
+    }
+    
+    @media (max-width: 480px) {
+      .short-text { font-size: x-small; }
     }
   </style>
 
@@ -32,7 +36,7 @@
 
 {% block content %}
 
-  <span class="titulo">Relatórios Públicos</span>
+  <span class="titulo">Relatórios Públicos {% include "informacoes.html" %}</span>
 
   {% if relatorios %}
   <div class="table-responsive">
@@ -46,6 +50,7 @@
           <th onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
           <th onclick="w3.sortHTML('#RelatoriosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Período</th>
           <th class="text-center">Documento</th>
+          <th class="text-center">URLs</th>
         </tr>
       </thead>
       <tbody>
@@ -101,7 +106,7 @@
                 {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                   <a href="{% url 'organizacao_completo' relatorio.projeto.organizacao.id %}">
                 {% endif %}
-                  {{ relatorio.projeto.organizacao.nome }}
+                  {{ relatorio.projeto.organizacao.sigla }}
                 {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                   </a>
                 {% endif %}
@@ -116,18 +121,34 @@
 
             <td>
                 {% if relatorio.link%}
-                  <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text">{{relatorio.link}}</span>
-                    <span class="short-text">Link DSpace</span>
+                  <a class="btn btn-light btn-outline-info btn-sm" style="margin-bottom: 5px;" 
+                     href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                    <span class="short-text" style="width: 4em;">DSpace</span>
+                    <span class="full-text" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>
                   </a><br>
                 {% endif %}
                 {% if relatorio.documento%}
-                  <a href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
-                    <span class="full-text">http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}</span>
-                    <span class="short-text">Link PFE</span>
+                  <a class="btn btn-light btn-outline-info btn-sm"
+                     href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
+                    <span class="short-text" style="width: 4em;">Serv. PFE</span>
+                    <span class="full-text" style="width: 12em;">Link&nbsp;alternativo&nbsp;(Serv. PFE)</span>
                   </a>
                 {% endif %}
             </td>
+
+
+            <td>
+              {% if relatorio.link%}
+                <a href="{{relatorio.link}}" target="_blank" rel="noopener noreferrer">
+                  <span>{{relatorio.link}}</span>
+                </a><br>
+              {% endif %}
+              {% if relatorio.documento%}
+                <a href="http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}" target="_blank" rel="noopener noreferrer">
+                  <span>http://{{request.get_host}}{{MEDIA_URL}}{{relatorio.documento}}</span>
+                </a>
+              {% endif %}
+          </td>
 
           </tr>
 
@@ -142,5 +163,12 @@
   {% endif %}
 
   <br>
+
+  <script>
+    function carrega_pagina() {
+      $('#RelatoriosTable tr > *:nth-child(7)').hide();  
+    };
+    window.onload = carrega_pagina
+  </script>
   
 {% endblock %}
