--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -129,7 +129,7 @@
               <td>
                 {% if projeto and projeto.organizacao %}
                   <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-                    {{ projeto.organizacao.nome }}
+                    {{ projeto.organizacao.sigla }}
                   </a>
                 {% else %}
                   ORGANIZAÇÃO NÃO DEFINIDA
