--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -34,12 +34,12 @@
 
   <div class="atualizar">
 
-    <table id="AlunosTable">
+    <table id="EstudantesTable">
       <tr>
           <th class="text-center">C</th>
-          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Estudante</th>
-          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
-          <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">CR</th>
+          <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Estudante</th>
+          <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
+          <th onclick="w3.sortHTML('#EstudantesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">CR</th>
       </tr>
       {% for aluno,opcoes,opcoestemp in alunos_list %} 
         <tr class="item">
@@ -138,7 +138,7 @@
       function carrega_graficos() {
         var ctx = document.getElementById('chart-area').getContext('2d');
         window.myPie = new Chart(ctx, config);
-        $('#AlunosTable tr > *:nth-child(4)').hide();  
+        $('#EstudantesTable tr > *:nth-child(4)').hide();  
       }
     
       function carrega_pagina() {};
