--- a/templates/areas.html
+++ b/templates/areas.html
@@ -4,7 +4,12 @@
     Data: 21 de Abril de 2020
 {% endcomment %}
 
-{% comment %} <style>table,td,tr,th {border: none;}</style> {% endcomment %}
+{% comment %} <style>
+      table,td,tr,th {
+        border: none;
+        font-size: 14px;
+      }
+    </style> {% endcomment %}
 
 {% if areast %}
 
