--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -208,7 +208,8 @@ table, th, td {
   padding:7px 24px;
   text-decoration:none;
   text-shadow:0px 1px 0px #810e05;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
+  margin-top: 3px; 
 }
 .myButton:hover {
   background-color:#c62d1f;
