--- a/templates/areas.html
+++ b/templates/areas.html
@@ -4,12 +4,19 @@
     Data: 21 de Abril de 2020
 {% endcomment %}
 
-{% comment %} <style>
-      table,td,tr,th {
-        border: none;
-        font-size: 14px;
-      }
-    </style> {% endcomment %}
+<style>
+  .sem_b, .sem_b td {
+    border: none;
+    font-size: 14px;
+  }
+  .ar_in {
+    padding: 0px 3px 0px 3px;
+  }
+  .ar_la {
+    line-height:0.6em;
+    margin-bottom: 0px;
+  }
+</style>
 
 {% if areast %}
 
@@ -19,7 +26,7 @@
         });
     </script>
 
-    <table>
+    <table class="sem_b">
         {% if titulo_areas %}
             <tr>
                 <td style="text-align: center;"><input type="checkbox" id="titulo_areas" value="{{area.titulo}}"
@@ -30,8 +37,8 @@
             </tr>
         {% endif %}
         {% for area in areast %}
-            <tr><td>&nbsp;
-                    <input type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}" class="filtra_area"
+            <tr><td class="ar_in">
+                    <input style="position: relative; top: 2px;" type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}" class="filtra_area"
                     {% if tudo_ligado %}
                         checked
                     {% else %}
@@ -39,14 +46,14 @@
                             {% if area == a.area %}checked{% endif %}
                         {% endfor %}
                     {% endif %}
-                    {% if vencido %}disabled{% endif %}>&nbsp;
+                    {% if vencido %}disabled{% endif %}>
                 </td>
-                <td style="padding-left: 6px; padding-right: 6px;"
+                <td class="ar_in"
                     {% if area.descricao %}
                         data-toggle="tooltip" data-html="true" animation="true" title="{{area.descricao}}"
                     {% endif %}
                     >
-                    <label for="{{area.id}}" style="line-height:0.6em;">{{area.titulo}}</label>
+                    <label for="{{area.id}}" class="ar_la">{{area.titulo}}</label>
                 </td>
             </tr>
         {% endfor %}
@@ -54,7 +61,7 @@
     <div style="height:8px;font-size:8px;">&nbsp;</div>
     
     {% if not not_outras %}
-        <label for="outras">Outras:</label> 
+        <label style="display: inline-block; vertical-align: top; font-size: 14px;" for="outras">Outras:</label> 
         <textarea type="text" cols="29" maxlength="128" id="outras" name="outras" wrap="soft"
         {% if vencido %}disabled{% endif %}
         >{% for a in aa %}{% if a.outras %}{{a.outras}}{% endif %}{% endfor %}</textarea>
